# xdaqProto

./: CMakeLists.txt  README  README.md  myconnections.xml
GlibViewer/: CMakeLists.txt
GlibViewer/GlibViewer/: Makefile  myaddress.xml  myaddress2.xml  myconnections.xml
GlibViewer/GlibViewer/include/GlibViewer/: GlibViewer.h  version.h
GlibViewer/GlibViewer/js/: test.js
GlibViewer/GlibViewer/src/common/: GlibViewer.cc  version.cc
GlibViewer/GlibViewer/xml/: GlibViewer.xml
GlibViewer/uhalWrapper/: CMakeLists.txt  README  compile.sh  myaddress.xml
GlibViewer/uhalWrapper/inc/: ChipProp.h  ChipProp.h~  glib.h  glib.h~  vfat.h  vfat.h~
GlibViewer/uhalWrapper/src/: ChipProp.cpp  glib.cpp  glib.cpp~  vfat.cpp  vfat.cpp~
GlibViewer/uhalWrapper/tests/: sturdy.cpp  system.cpp  writeHexString.cpp  writeTest.cpp
XDaqAppCreator/: MakefileTemp  README  addClass.sh  bootStrap.sh  env.sh  tempAddHeaderfile  tempAddSourcefile  tempHeaderfile  tempSourcefile  tempXML.xml  xdaqAppCreator.sh  xdaqAppCreator.sh.bacup2.working.perfectly  xdaqAppCreator.sh.before.Automize
XDaqAppCreator/config/: MakefileGLIB.macros  MakefileGLIB.macros.backup  MakefileGLIB.sh  outlist
XDaqAppCreator/js/: helpers.js
XDaqAppCreator/myPProj/myPPackage/: Makefile
XDaqAppCreator/myPProj/myPPackage/include/myPPackage/: myPPackage.h
XDaqAppCreator/myPProj/myPPackage/src/common/: myPPackage.cc
XDaqAppCreator/myPProj/myPPackage/src/linux/x86_64_slc/: myPPackage.d  version.d
XDaqAppCreator/myPProj/myPPackage/xml/: myPPackage.xml
cmake/modules/: FinduHAL.cmake
